config/base/derive/tests/ui_fail/struct_attrs.stderr
error: Unknown field: `whatever`
 --> tests/ui_fail/struct_attrs.rs:4:10
  |
4 | #[config(whatever, a, b, c)]
  |          ^^^^^^^^

error: Unknown field: `a`
 --> tests/ui_fail/struct_attrs.rs:4:20
  |
4 | #[config(whatever, a, b, c)]
  |                    ^

error: Unknown field: `b`
 --> tests/ui_fail/struct_attrs.rs:4:23
  |
4 | #[config(whatever, a, b, c)]
  |                       ^

error: Unknown field: `c`
 --> tests/ui_fail/struct_attrs.rs:4:26
  |
4 | #[config(whatever, a, b, c)]
  |                          ^
